feat: Add User Test Recorder extension with recording and replay functionality
- Implemented manifest.json for the extension setup.
- Created popup.html for user interface with Start, Stop, and Replay buttons.
- Developed popup.js to handle user interactions and communicate with background scripts.
- Added functionality to record user clicks and replay them with visual feedback.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-nodes_modules/    
+# Dépendances
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn-debug.log
+
+# Fichiers de build
+/dist
+/build
+
+# Fichiers d'environnement
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
